--- a/mnbAddIn/mnbService/mnbService.csproj
+++ b/mnbAddIn/mnbService/mnbService.csproj
@@ -50,6 +50,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebService\MNBArfolyamServiceSoapImpl.cs" />
+    <Compile Include="Worker.cs" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
