--- a/mnbAddIn/mnbAddIn/app.config
+++ b/mnbAddIn/mnbAddIn/app.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+  </configSections>
+  <connectionStrings>
+    <add name="mnbAddIn.Properties.Settings.DbConnectionString" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=E:\c_sharp\Capture\ExcelAddIn\mnbAddIn\dbLogger\db\Db.accdb;Persist Security Info=True"
+      providerName="System.Data.OleDb" />
+  </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
